# sumi

./: .gitignore  AGENTS.md  Cargo.toml  README.md  benchmark.js  benchmark.lua  oranda.json  rustfmt.toml  sumi.rhai
.cargo/: config.toml
.github/workflows/: benchmark.yml  clippy.yml  generate.yml  k6_benchmark.yml  miri.yml  rust.yml  test.yml  testwebsite.yml
src/: ascii.txt  cache.rs  config.rs  error.rs  lib.rs  logger.rs  main.rs  metrics.rs  renderer.rs  routes.rs  stats.rs
src/pure/: Cargo.toml  README.md  cache.rs  encoder.rs
src/renderer/: atlas.rs  cache.rs  canvas.rs  encoder.rs  encoding.rs  error.rs  image.rs  mod.rs  pixels.rs  print.rs
tests/: api.rs
tests/common/: mod.rs
