[package]
  name    = "sumi"
  version = "1.2.0"
  edition = "2024"

[dependencies]
  axum               = { version = "0.8.9" }
  bytes              = "1.9.0"
  fontdue            = "0.9.3"
  mimalloc           = "0.1.51"
  dashmap            = "6.1.0"
  ahash              = "0.8.11"
  tracing            = "0.1.41"
  tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
  serde              = { version = "1.0.217", features = ["derive"] }
  serde_json         = "1.0.150"
  tokio              = { version = "1.52.3", features = ["rt-multi-thread", "sync", "fs", "signal", "macros", "net", "time"] }
  webpx              = "0.4.0"

[profile.release]
  lto           = "fat"
  opt-level     = 3
  codegen-units = 1
  panic         = "abort"
  strip         = "symbols"  

[profile.dev]
  debug = false
