[package]
  name    = "sumi"
  version = "1.3.0"
  edition = "2024"
  rust-version = "1.87"

[dependencies]
  axum               = "0.8.9"
  bytes              = "1.12.1"
  fontdue            = "0.9.3"
  mimalloc           = "0.1.52"
  dashmap            = "6.2.1"
  ahash              = "0.8.12"
  tracing            = "0.1.44"
  tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
  serde              = { version = "1.0.228", features = ["derive"] }
  serde_json         = "1.0.150"
  tokio              = { version = "1.53.0", features = ["rt-multi-thread", "sync", "fs", "signal", "macros", "net", "time"] }
  webpx              = "0.4.0"
  itoa               = "1.0.18"

[dev-dependencies]
tempfile = "3.10.1"

[profile.release]
  lto           = "fat"
  opt-level     = 3
  codegen-units = 1
  panic         = "abort"
  strip         = "symbols"  

[profile.dev]
  debug = false
